--- a/experience.html
+++ b/experience.html
@@ -61,6 +61,17 @@
                 </div>
             </div>
             <div class="vertical">
+            <img class="image-top" src="skill.png" alt="image not found" />
+          <div class="vertical-title">
+            Research Assistant (Sept'23 - PRESENT)
+          </div>
+          <div class="vertical-desc">
+            My job responsibility is to write Literature review, data
+            collection, analysis, collaboration, report writing, presentations
+            etc.
+          </div>
+        </div>
+            <div class="vertical">
                 <div class="vertical-title" style=" position: relative;
             width: 200px;
             top: 50px;
