--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="../education.html">Education</a></li>
                     <li><a href="skill.html">Skills</a></li>
-                    <li><a href="/">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="../experience.html">Work Experience</a></li>
                     <li><a href="">MORE</a></li>
                     <li><a href="/">Contact Me</a></li>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="buttons">
                     <button class="btn"><a
-                            href="https://drive.google.com/file/d/1HVnJmTFs8caRog_EZf-MgNrlnL9S5LLg/view?usp=sharing">Download
+                            href="https://drive.google.com/file/d/1NLMDks8oAX2jwuIHuYd1gPwE1yEWkGeH/view?usp=sharing">Download
                             Resume</a></button>
                     <button class="btn"><a href="https://github.com/Sumaiya-uiu">Visit GitHub</a></button>
                 </div>
