--- a/education.html
+++ b/education.html
@@ -111,7 +111,7 @@
                 <ul>
                     <li><a href="../education.html">Education</a></li>
                     <li><a href="skill.html">Skills</a></li>
-                    <li><a href="/">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="../experience.html">Work Experience</a></li>
                     <li><a href="">MORE</a></li>
                     <li><a href="/">Contact Me</a></li>
