--- a/experience.html
+++ b/experience.html
@@ -1,95 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Work Experience</title>
-</head>
-<style>
+  </head>
+  <style>
     .secondSection {
-        max-width: 87vw;
-        margin: auto;
-        padding: 75px;
-        height: 44vh;
+      max-width: 87vw;
+      margin: auto;
+      padding: 75px;
+      height: 44vh;
     }
 
     .footer {
-        display: flex;
-        margin-top: 42px;
-        padding: 17px 60px;
-        justify-content: space-evenly;
+      display: flex;
+      margin-top: 42px;
+      padding: 17px 60px;
+      justify-content: space-evenly;
     }
-</style>
+  </style>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <div class="left">
-                <a href="/">Sumaiya Akter</a>
-            </div>
-            <div class="right">
-                <ul>
-                    <li><a href="../education.html">Education</a></li>
-                    <li><a href="skill.html">Skills</a></li>
-                    <li><a href="/">Projects</a></li>
-                    <li><a href="../experience.html">Work Experience</a></li>
-                    <li><a href="">MORE</a></li>
-                    <li><a href="/">Contact Me</a></li>
-                </ul>
-            </div>
-        </nav>
+      <nav>
+        <div class="left">
+          <a href="/">Sumaiya Akter</a>
+        </div>
+        <div class="right">
+          <ul>
+            <li><a href="../education.html">Education</a></li>
+            <li><a href="skill.html">Skills</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="../experience.html">Work Experience</a></li>
+            <li><a href="">MORE</a></li>
+            <li><a href="/">Contact Me</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <section class="secondSection">
-
-        <span class="text-gray">
-            What I have done so far
-            <!-- Skills to solve complex problems -->
-        </span>
-        <!-- <h3>Technical Skills</h3> -->
-        <h3>Work Experience</h3>
-        <div class="box">
-            <div class="vertical">
-                <img class="image-top" src="skill.png" alt="image not found">
-                <div class="vertical-title">
-                    Undergraduate Assistant (Feb'23 - May'23)
-                </div>
-                <div class="vertical-desc">
-                    My job responsibility was to assist faculty member(s) in taking the course(s) as well as
-                    students in that course with programming related problems.
-                </div>
-            </div>
-            <div class="vertical">
-                <div class="vertical-title" style=" position: relative;
-            width: 200px;
-            top: 50px;
-            left:-5px">
-                    X
-                </div>
-            </div>
-            <div class="vertical">
-                <div class="vertical-title" style=" position: relative;
-            width: 200px;
-            top: 50px;
-            left:-5px">
-                    X
-                </div>
-            </div>
+      <span class="text-gray">
+        What I have done so far
+        <!-- Skills to solve complex problems -->
+      </span>
+      <!-- <h3>Technical Skills</h3> -->
+      <h3>Work Experience</h3>
+      <div class="box">
+        <div class="vertical">
+          <img class="image-top" src="skill.png" alt="image not found" />
+          <div class="vertical-title">
+            Undergraduate Assistant (Feb'23 - May'23)
+          </div>
+          <div class="vertical-desc">
+            My job responsibility was to assist faculty member(s) in taking the
+            course(s) as well as students in that course with programming
+            related problems.
+          </div>
         </div>
-
+        <div class="vertical">
+            <img class="image-top" src="skill.png" alt="image not found" />
+          <div class="vertical-title">
+            Research Assistant (Sept'23 - PRESENT)
+          </div>
+          <div class="vertical-desc">
+            My job responsibility is to write Literature review, data
+            collection, analysis, collaboration, report writing, presentations
+            etc.
+          </div>
+        </div>
+        <div class="vertical">
+          <div
+            class="vertical-title"
+            style="position: relative; width: 200px; top: 50px; left: -5px"
+          >
+            X
+          </div>
+        </div>
+      </div>
     </section>
     <footer>
-        <div class="footer">
-            <div class="footer-1">
-                <h5>EMAIL:<i>jahansumaiya49@gmail.com</i></h5>
-            </div>
+      <div class="footer">
+        <div class="footer-1">
+          <h5>EMAIL:<i>jahansumaiya49@gmail.com</i></h5>
         </div>
-        <div class="footer-rights">
-            Copyright &#169; Sumaiya Akter | All Rights Reserved
-        </div>
+      </div>
+      <div class="footer-rights">
+        Copyright &#169; Sumaiya Akter | All Rights Reserved
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
