--- a/skill.html
+++ b/skill.html
@@ -86,6 +86,10 @@
         width: 85%;
         animation: javascript 3s;
     }
+    .reactjs{
+        width: 85%;
+        animation: reactjs 3s;
+    }
     .java{
         width: 80%;
         animation: java 3s;
@@ -116,6 +120,16 @@
         }
         100%{
             width: 85%;
+        }
+    }
+
+
+    @keyframes reactjs{
+        0%{
+            width: 0%;
+        }
+        100%{
+            width: 80%;
         }
     }
 
@@ -171,16 +185,21 @@ footer{
         <li>
             <h3>C/C++</h3>
             <span class="bar"><span class="c"></span></span>
-
-        </li>
-        <li>
-            <h3>Python</h3>
-            <span class="bar"><span class="python"></span></span>
+            
         </li>
         <li>
             <h3>Javascript</h3>
             <span class="bar"><span class="javascript"></span></span>
 
+        </li>
+        <li>
+            <h3>ReactJS</h3>
+            <span class="bar"><span class="reactjs"></span></span>
+    
+        </li>
+        <li>
+            <h3>Python</h3>
+            <span class="bar"><span class="python"></span></span>
         </li>
         <li>
             <h3>HTML/CSS </h3>
@@ -191,11 +210,6 @@ footer{
         <li>
             <h3>Java </h3>
             <span class="bar"><span class="java"></span></span>
-
-        </li>
-        <li>
-            <h3>PHP</h3>
-            <span class="bar"><span class="php"></span></span>
 
         </li>
     </div>
