--- a/skill.html
+++ b/skill.html
@@ -172,7 +172,7 @@ footer{
                 <ul>
                     <li><a href="../education.html">Education</a></li>
                     <li><a href="skill.html">Skills</a></li>
-                    <li><a href="/">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="../experience.html">Work Experience</a></li>
                     <li><a href="">MORE</a></li>
                     <li><a href="/">Contact Me</a></li>
